# amazon-ML-school

./: .gitignore  .~lock.TensorTitans.docx#  README.md  README_Version2.md  TensorTitans.docx  TensorTitans.ipynb  features.py  pyproject.toml  requirements.txt  train_text_ensemble_elite.py
student_resource/src/: baseline_model.py  data_preprocessing.py  improved_model.py
test-code/: Makefile  project_structure.txt
test-code/student_resource/src/: baseline_lgbm.py  data_preprocessing.py  example.ipynb  utils.py
